--- a/TAG.html
+++ b/TAG.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="TAG.js"></script>
+<script type="text/javascript" src="https://cdn.rawgit.com/katai5plate/TAG/master/TAG.js"></script>
 <script type="text/javascript">
     const jsName = "TAG";
     TAG("html",[
@@ -14,7 +14,7 @@
             TAG("h2",["Getting Started"]),
             TAG("h3",["Main HTML"]),
             TAG("pre",[
-                '\<script type="text/javascript" src="https://raw.githubusercontent.com/katai5plate/TAG/master/TAG.js"\>\</script\>\n',
+                '\<script type="text/javascript" src="https://cdn.rawgit.com/katai5plate/TAG/master/TAG.js"\>\</script\>\n',
                 '\<script type="text/javascript"\>\n',
                 '\<!-- CODING HERE --\>\n',
                 '\</script\>'
